objects/Subdivision__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Subdivisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Subdivisions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sitemap_URL__c</fullName>
        <label>Sitemap URL</label>
        <type>TextArea</type>
    </fields>
    <description>NEWSTAR Sales Subdivision</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Only</fullName>
        <columns>NAME</columns>
        <columns>Sales_Office__c</columns>
        <columns>Marketing_Community__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Only</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Office__c</columns>
        <columns>Marketing_Community__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>